# simple-programming-language

./: LICENSE  README.md  simple-programming-language.cabal  stack.yaml
app/: Main.hs
src/Control/: Parser.hs
