cabal-version: 2.2

name:           simple-programming-language
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/simple-programming-language#readme>
homepage:       https://github.com/t-sasaki915/simple-programming-language#readme
bug-reports:    https://github.com/t-sasaki915/simple-programming-language/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2025 Toma Sasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/simple-programming-language

library
  exposed-modules:
      Control.Parser
  other-modules:
      Paths_simple_programming_language
  autogen-modules:
      Paths_simple_programming_language
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , text ==2.0.2
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings

executable simple-programming-language-exe
  main-is: Main.hs
  other-modules:
      Paths_simple_programming_language
  autogen-modules:
      Paths_simple_programming_language
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , simple-programming-language
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings

test-suite simple-programming-language-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_simple_programming_language
  autogen-modules:
      Paths_simple_programming_language
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , simple-programming-language
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings
